[gd_scene load_steps=5 format=2]

[ext_resource path="res://RootV2/RootV2.gd" type="Script" id=1]
[ext_resource path="res://RootV2/Town.gd" type="Script" id=2]
[ext_resource path="res://RootV2/Null.gd" type="Script" id=3]
[ext_resource path="res://RootV2/Road.gd" type="Script" id=4]

[node name="RootV2" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="RoadSprite" type="Sprite" parent="."]

[node name="Null" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Town" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Res_A" type="Node2D" parent="."]

[node name="Res_B" type="Node2D" parent="."]

[node name="Road" type="Node2D" parent="."]
script = ExtResource( 4 )
